--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit==1.26.0
-pandas==2.0.3
-numpy==1.26.0
-plotly==5.14.1
+streamlit>=1.33.0
+pandas>=2.2.2
+numpy>=1.26.4
+plotly>=5.21.0
+pillow==10.2.0
